1.5.3 (24.09.2016):

* Added scroll bars to all tabs on scan dialog.
  Closes bug #228 (missing scan+close button on scanning window)
* Fixed bug copy-pasting pages where subsequent operations on new pages are
  carried out on old pages.
* Changed default compression for lineart PDFs to PNG.


1.5.2 (24.08.2016):

* Fixed bug prepending or appending to a PDF with a space in the path.
* Refactored code handling geometry options to reduce complexity and duplication
* Removed metadata variables %h, %i, %s, adding %H, %I, %S.
  Closes bug #226 (Formatting timestamp for filename template broken)
* Encode document date in ASCII to workaround a bug in PDF::API2 where UTF-8
  encoding caused garbage in the metadata.
  Closes bug #224 (CreationDate and ModDate fields are missing)
* If the output from user-defined tool is pnm, there is no way to tell the
  resolution, so assume that it is the same as the input.
  Closes bug #227 (Page size corruption in 1.5.1)
* Support hand-scanner option in test backend. Closes bug #223
  ("Auto length detection" option does not work with ScanSnap IX500)
* Filter out double memory address from unpaper warning.
  Closes Debian bug #833521 (unpaper AVStream codec deprecation warning)
* Update to Slovak translation (thanks to Dusan Kazik)


1.5.1 (26.07.2016):

* Fix "Can't use string ("gimp %i") as an ARRAY ref"
  Closes bug #222 (Error when run gscan2pdf 1.5)
  Closes Debian bug #831597 (Can't use string ("gimp %i") as an ARRAY ref)
* Store and apply backend (scanner-specific) and gscan2pdf settings separately.
* Those frontend settings stored in profiles need not be stored in general
  settings.
* When paper in use, hide other geometry widgets
* When saving profile, if name already exists,
  add warning and don't duplicate the combobox text


1.5.0 (11.06.2016):

* Also import text layer when importing PDF or DjVu.
* + option in Edit/Preference to allow/forbid batch scanning from a flatbed
* Store date as string to avoid time zone problems