@@ -5,6 +5,7 @@
 * Fixed bug copy-pasting pages where subsequent operations on new pages are
   carried out on old pages.
 * Changed default compression for lineart PDFs to PNG.
+* Fixed cycle SANE handle option to reset options after reloading.
 
 
 1.5.2 (24.08.2016):
